--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,8 @@ services:
       - mysql
 
   mysql:
-    image: mysql:latest
+    #image: mysql:latest
+    image: mysql:8.4
     ports:
       - "6060:3306"
     volumes:
